feat: Update TraceabilityUseCase to use toList() for stream collection; add authorization check in TraceabilityController